webhook/06-el-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el-event-listener-php-http-vars
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-php-http-vars
spec:
  to:
    kind: Service
    name: event-listener-php-http-vars
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
  wildcardPolicy: None
